--- a/SampleRepoNew1/Src/Screen1.fx.yaml
+++ b/SampleRepoNew1/Src/Screen1.fx.yaml
@@ -24,3 +24,9 @@ Screen1 As screen:
         Y: =40
         ZIndex: =4
 
+    Label1 As label:
+        Text: ="Text"
+        X: =297
+        Y: =250
+        ZIndex: =5
+
