--- a/SampleRepoNew1/Src/Screen1.fx.yaml
+++ b/SampleRepoNew1/Src/Screen1.fx.yaml
@@ -46,3 +46,9 @@ Screen1 As screen:
         Y: =420
         ZIndex: =8
 
+    Label2 As label:
+        Text: ="Text"
+        X: =413
+        Y: =252
+        ZIndex: =9
+
