--- a/SampleRepoNew1/Src/Screen1.fx.yaml
+++ b/SampleRepoNew1/Src/Screen1.fx.yaml
@@ -60,3 +60,9 @@ Screen1 As screen:
         Y: =100
         ZIndex: =10
 
+    TextInput1 As text:
+        Default: ="Text input"
+        X: =703
+        Y: =320
+        ZIndex: =11
+
